--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-torch
+torch==2.4.0
+vllm==0.6.3.post1
 transformers
 datasets
 accelerate
@@ -6,5 +7,9 @@ pandas
 numpy
 matplotlib
 scikit-learn
+requests
+jupyter
+notebook
 yapf
 loguru
+fire
